added stylix and linked configs

--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -2,7 +2,7 @@
   border: none;
   border-radius: 0;
   min-height: 0;
-  font-family: 'JetBrains Mono NL';
+  font-family: 'JetBrainsMono Nerd';
   font-size: 14px;
 }
 
